core/shotcore/include/shotcore.h

/* Encode all frame-*.png in a directory (sorted) to an animated looping GIF. */
int shotcore_encode_gif_dir(const char *dir_path, uint32_t fps, uint32_t max_width, const char *out_path);
char *shotcore_extract_links(const char *text);
char *shotcore_hough_lines(const uint8_t *rgba, uintptr_t len, uint32_t width, uint32_t height, uint8_t edge_threshold, uint32_t max_lines);
double shotcore_hough_dominant_angle(const uint8_t *rgba, uintptr_t len, uint32_t width, uint32_t height, uint8_t edge_threshold);
double shotcore_skew_angle(const uint8_t *rgba, uintptr_t len, uint32_t width, uint32_t height);
char *shotcore_corners(const uint8_t *rgba, uintptr_t len, uint32_t width, uint32_t height, double k, double rel_threshold, uint32_t min_distance);
int shotcore_perspective_unwarp(const char *in_path, const char *out_path, const char *corners_json, uint32_t out_w, uint32_t out_h);
int shotcore_unsharp(const char *in_path, const char *out_path, uint32_t radius, float amount);
char *shotcore_detect_document(const uint8_t *rgba, uintptr_t len, uint32_t width, uint32_t height, uint8_t tol);
int shotcore_white_balance(const char *in_path, const char *out_path);
int shotcore_deskew(const char *in_path, const char *out_path);
int shotcore_auto_color(const char *in_path, const char *out_path);
int shotcore_images_to_pdf(const char *in_paths_json, const char *out_path, uint32_t quality);
char *shotcore_combine_stack_vertical(const char *sizes_json, uint32_t gap);
char *shotcore_table_csv(const char *ocr_json, double col_tol);
char *shotcore_table_markdown(const char *ocr_json, double col_tol);
/* Opaque stateful annotation editor handle. */
typedef struct ShotEditor ShotEditor;
void shotcore_editor_set_stroke_color(ShotEditor *ed, uint8_t r, uint8_t g, uint8_t b, uint8_t a);
void shotcore_editor_set_stroke_width(ShotEditor *ed, double width);
/* Set the active shape style (and recolor the selection) from a ShapeStyle JSON. Returns 1 on success. */
int shotcore_editor_set_style_json(ShotEditor *ed, const char *style_json);
/* ShareX custom uploader: parse config JSON, build the HTTP request plan JSON (resolves request-time {input}/{filename}/{random}). Free result. */
char *shotcore_custom_uploader_build_plan(const char *config_json, const char *input, const char *filename);
/* ShareX custom uploader: resolve response links JSON (url/thumbnail_url/deletion_url) via {json/regex/xml/header/response} syntax. Free result. */
char *shotcore_custom_uploader_resolve_response(const char *config_json, const char *response, const char *headers_json, const char *input, const char *filename);