apps/windows/SloerShot.App/Interop/ShotCore.cs

 // --- Hough lines + auto-deskew + Harris corners ---
 [DllImport(Lib, EntryPoint = "shotcore_hough_lines")]
 private static extern IntPtr HoughLinesRaw(byte[] rgba, UIntPtr len, uint width, uint height, byte edgeThreshold, uint maxLines);
 public static string? HoughLines(byte[] rgba, uint width, uint height, byte edgeThreshold, uint maxLines) => TakeString(HoughLinesRaw(rgba, (UIntPtr)rgba.Length, width, height, edgeThreshold, maxLines));
 [DllImport(Lib, EntryPoint = "shotcore_hough_dominant_angle")]
 private static extern double HoughDominantAngleRaw(byte[] rgba, UIntPtr len, uint width, uint height, byte edgeThreshold);
 public static double HoughDominantAngle(byte[] rgba, uint width, uint height, byte edgeThreshold) => HoughDominantAngleRaw(rgba, (UIntPtr)rgba.Length, width, height, edgeThreshold);
 [DllImport(Lib, EntryPoint = "shotcore_skew_angle")]
 private static extern double SkewAngleRaw(byte[] rgba, UIntPtr len, uint width, uint height);
 public static double SkewAngle(byte[] rgba, uint width, uint height) => SkewAngleRaw(rgba, (UIntPtr)rgba.Length, width, height);
 [DllImport(Lib, EntryPoint = "shotcore_corners")]
 private static extern IntPtr CornersRaw(byte[] rgba, UIntPtr len, uint width, uint height, double k, double relThreshold, uint minDistance);
 public static string? Corners(byte[] rgba, uint width, uint height, double k, double relThreshold, uint minDistance) => TakeString(CornersRaw(rgba, (UIntPtr)rgba.Length, width, height, k, relThreshold, minDistance));
 // --- Perspective unwarp (document flatten) + unsharp sharpen (path-based) ---
 [DllImport(Lib, EntryPoint = "shotcore_perspective_unwarp", CharSet = CharSet.Ansi)]
 public static extern int PerspectiveUnwarp(string inPath, string outPath, string cornersJson, uint outW, uint outH);
 [DllImport(Lib, EntryPoint = "shotcore_unsharp", CharSet = CharSet.Ansi)]
 public static extern int Unsharp(string inPath, string outPath, uint radius, float amount);
 // --- Auto document detection + white balance/auto-color + multi-page PDF ---
 [DllImport(Lib, EntryPoint = "shotcore_detect_document")]
 private static extern IntPtr DetectDocumentRaw(byte[] rgba, UIntPtr len, uint width, uint height, byte tol);
 public static string? DetectDocument(byte[] rgba, uint width, uint height, byte tol) => TakeString(DetectDocumentRaw(rgba, (UIntPtr)rgba.Length, width, height, tol));
 [DllImport(Lib, EntryPoint = "shotcore_white_balance", CharSet = CharSet.Ansi)]
 public static extern int WhiteBalance(string inPath, string outPath);
 [DllImport(Lib, EntryPoint = "shotcore_auto_color", CharSet = CharSet.Ansi)]
 public static extern int AutoColor(string inPath, string outPath);
 [DllImport(Lib, EntryPoint = "shotcore_images_to_pdf", CharSet = CharSet.Ansi)]
 public static extern int ImagesToPdf(string inPathsJson, string outPath, uint quality);

[DllImport(Lib, EntryPoint = "shotcore_editor_set_stroke_color")]
public static extern void EditorSetStrokeColor(IntPtr ed, byte r, byte g, byte b, byte a);
[DllImport(Lib, EntryPoint = "shotcore_editor_set_stroke_width")]
public static extern void EditorSetStrokeWidth(IntPtr ed, double width);

 [DllImport(Lib, EntryPoint = "shotcore_editor_set_style_json", CharSet = CharSet.Ansi)]
 public static extern int EditorSetStyleJson(IntPtr ed, string json);

[DllImport(Lib, EntryPoint = "shotcore_deskew", CharSet = CharSet.Ansi)]
public static extern int Deskew(string inPath, string outPath);

 [DllImport(Lib, EntryPoint = "shotcore_encode_gif_dir", CharSet = CharSet.Ansi)]
 public static extern int EncodeGifDir(string dirPath, uint fps, uint maxWidth, string outPath);

 [DllImport(Lib, EntryPoint = "shotcore_extract_links", CharSet = CharSet.Ansi)]
 private static extern IntPtr ExtractLinksRaw(string text);
 public static string? ExtractLinks(string text) => TakeString(ExtractLinksRaw(text));
 [DllImport(Lib, EntryPoint = "shotcore_table_csv", CharSet = CharSet.Ansi)]
 private static extern IntPtr TableCsvRaw(string ocrJson, double colTolerance);
 public static string? TableCsv(string ocrJson, double colTolerance) => TakeString(TableCsvRaw(ocrJson, colTolerance));
 [DllImport(Lib, EntryPoint = "shotcore_table_markdown", CharSet = CharSet.Ansi)]
 private static extern IntPtr TableMarkdownRaw(string ocrJson, double colTolerance);
 public static string? TableMarkdown(string ocrJson, double colTolerance) => TakeString(TableMarkdownRaw(ocrJson, colTolerance));
 [DllImport(Lib, EntryPoint = "shotcore_combine_stack_vertical", CharSet = CharSet.Ansi)]
 private static extern IntPtr CombineStackVerticalRaw(string sizesJson, uint gap);
 public static string? CombineStackVertical(string sizesJson, uint gap) => TakeString(CombineStackVerticalRaw(sizesJson, gap));

 // ShareX-style custom uploader (engine lives in the Rust core: custom_uploader.rs).
 [DllImport(Lib, EntryPoint = "shotcore_custom_uploader_build_plan", CharSet = CharSet.Ansi)]
 private static extern IntPtr CustomUploaderBuildPlanRaw(string configJson, string input, string filename);
 public static string? CustomUploaderBuildPlan(string configJson, string input, string filename) => TakeString(CustomUploaderBuildPlanRaw(configJson, input, filename));
 [DllImport(Lib, EntryPoint = "shotcore_custom_uploader_resolve_response", CharSet = CharSet.Ansi)]
 private static extern IntPtr CustomUploaderResolveResponseRaw(string configJson, string response, string headersJson, string input, string filename);
 public static string? CustomUploaderResolveResponse(string configJson, string response, string headersJson, string input, string filename) => TakeString(CustomUploaderResolveResponseRaw(configJson, response, headersJson, input, filename));
}
